build with gpsd-2.96

Based on Vincent Batts' patch. Thanks!

BUG: 269165